<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Traquer</string>
    <string name="hello_world">Hello world!</string>
    <string name="initial_speed">0.00</string>
    <string name="unit">km/h</string>
    <string name="menu_speed">Speedometer</string>
    <string name="menu_board">Billboard</string>
    <string name="bus_code">Enter your bus code here.</string>
    <string name="bus_num1">Bus Plate Number</string>
    <string name="taxi_num">Taxi Plate Number</string>
    <string name="bus_num">Vehicle Number</string>
    <string name="bus_comp">Bus Company</string>
    <string name="taxi_comp">Taxi Company</string>
    <string name="taxi_comp_hint">Taxi Company (optional)</string>
    <string name="taxi_driver">Taxi Driver</string>
    <string name="driver_name">Driver\'s Name</string>
    <string name="f_name">Name</string>
    <string name="f_name_hint">Your Name</string>
    <string name="taxi_license">License Number</string>
    <string name="integrity">Integrity</string>
    <string name="bus_type">Bus Type</string>
    <string name="loc_from">Location</string>
    <string name="date">Date</string>
    <string name="date_hint">mm-dd-yyy</string>
    <string name="time">Time</string>
    <string name="time_hint">hh:mm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="complaint">Complaint!</string>
    <string name="title_activity_speedometer">Speedometer</string>
    <string name="title_activity_traq_code">Traq Code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_traq_complaint">Complaint Form</string>
    <string name="title_activity_traq_comment">Comment the bus!</string>
    <string name="to">TO</string>
    <string name="rate">Rate</string>
    <string name="comment">Leave a comment here</string>
    <string name="comment1">How does the bus performance?</string>
    <string name="title_activity_traq_record">TraqRecord</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_fragment_record">Billboard</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="gCode">Geo Coordinates</string>
    <string name="longitude">Longitude:</string>
    <string name="lat">Latitude:</string>
    <string name="gps">No GPS </string>
    <string name="title_activity_feedback_rate">Rate &amp; Voice Out</string>
    <string name="title_activity_traq_feedback">TraqFeedback</string>
    <string name="action_app_feedback">Feedback to us</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint">Tell us your thoughts about your experience with Traquer and how can we improve it?</string>
    <string name="category">Category</string>
    <string name="app_id">896857077010045</string>
    <string name="safety">Safety</string>
    <string name="driver">Driver</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="comfortness">Comfortness</string>
    <string name="punctuality">Punctuality</string>
    <string name="action_send">Send</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="action_logout">Logout</string>
    <string name="action_about_us">About Us</string>
    <string name="action_call_support">Hotline SPAD</string>
    <string name="cannot">Cannot</string>
    <string name="destination">Destination</string>
    <string name="usr">Username</string>
    <string name="pass">Password</string>
    <string name="curr_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_repeat">New Password, again</string>
    <string name="mail">E-mail</string>
    <string name="mail_hint">Your E-mail</string>
    <string name="hpno">Phone Number</string>
    <string name="title_activity_bus_detail">Bus Detail Report</string>
    <string name="cmmt">View Comment</string>
    <string name="btn_speedo_complaint">Press red button to complaint</string>
    <string name="title_activity_list_cmmt">Comments</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="sign_up">Sign up with e-mail</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="facebook_app_id">1465314083742436</string>
    <string name="website">www.traquer.my</string>
    <string name="version">Version: 1.17</string>
    <string name="copyright">2014 © Little Hunter Enterprise</string>
    <string name="about_us_essay1">This application is created for the citizen in Malaysia to ensure their safety on the road.</string>
    <string name="about_us_essay2">To create safety awareness, improve services, and bring value into our cities.</string>
    <string name="about_us_essay3">Traquer, the idea of crowd-sourcing road safety app allows citizens to help each other to monitor safety on the road.</string>
    <string name="about_us_essay4">We believe this app will become the voice of public transportation, as we know everyone can make the difference!</string>
    <string name="title_activity_feedback_rate_taxi">Rate &amp; Voice Out</string>
    <string name="title_activity_traq_complaint_taxi">Complaint Form</string>
    <string name="title_activity_activity_app_feedback">Write Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="desc">Sign up button</string>

</resources>
