<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.speed.traquer.app.Speedometer" >

    <item android:id="@+id/action_call_support"
        android:title="@string/action_call_support"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_about_us"
        android:title="@string/action_about_us"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_feedback_traq"
        android:title="@string/action_app_feedback"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
