<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.speed.traquer.app.SignUp">

    <EditText
        android:id="@+id/usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="15sp"
        android:hint="@string/usr"
        android:drawableLeft="@drawable/usr"
        android:drawablePadding="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/pwd"
        android:layout_below="@id/usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:drawableLeft="@drawable/pwd"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:drawablePadding="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/mail"
        android:layout_below="@id/pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="15sp"
        android:hint="@string/mail"
        android:drawableLeft="@drawable/mail"
        android:inputType="textEmailAddress"
        android:drawablePadding="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/hpno"
        android:layout_below="@id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="15sp"
        android:hint="@string/hpno"
        android:drawableLeft="@drawable/hp"
        android:inputType="phone"
        android:drawablePadding="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_alignParentBottom="true"
        android:text="@string/title_activity_sign_up"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue"/>

</RelativeLayout>
