<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.speed.traquer.app.AppFeedback">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/logo_about"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_name"
            android:layout_marginTop="@dimen/form_margin"
            android:layout_marginLeft="@dimen/form_margin"
            android:layout_marginRight="@dimen/form_margin"
            android:textColor="@color/Black"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fName"
            android:layout_marginTop="@dimen/form_margin_top"
            android:layout_marginLeft="@dimen/logo_vertical_margin"
            android:layout_marginRight="@dimen/form_margin"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/f_name_hint"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:layout_marginTop="@dimen/form_margin"
            android:layout_marginLeft="@dimen/form_margin"
            android:layout_marginRight="@dimen/form_margin"
            android:textColor="@color/Black"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fMail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/form_margin_top"
            android:layout_marginLeft="@dimen/logo_vertical_margin"
            android:layout_marginRight="@dimen/form_margin"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/mail_hint"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:layout_marginTop="@dimen/form_margin"
            android:layout_marginLeft="@dimen/form_margin"
            android:layout_marginRight="@dimen/form_margin"
            android:textColor="@color/Black"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fFeedback"
            android:layout_marginTop="@dimen/form_margin_top"
            android:layout_marginLeft="@dimen/form_margin_top"
            android:layout_marginRight="@dimen/form_margin"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/feedback_hint"
            android:textSize="15sp"
            android:ems="10"
            android:gravity="left|top"
            android:inputType="textCapSentences|textMultiLine"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:isScrollContainer="false"
            android:text="@string/send_feedback"
            android:textSize="20sp"
            android:textColor="@color/White"
            android:id="@+id/feedback_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_complaint"/>
    </LinearLayout>
</LinearLayout>
