<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.speed.traquer.app.ChangePassword">

    <EditText
        android:id="@+id/curr_pwd"
        android:layout_below="@id/usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:hint="@string/curr_pass"
        android:drawableLeft="@drawable/pwd"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:drawablePadding="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/new_pwd"
        android:layout_below="@id/curr_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:hint="@string/new_pass"
        android:drawableLeft="@drawable/pwd"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:drawablePadding="@dimen/activity_vertical_margin"/>
    <EditText
        android:id="@+id/pwd"
        android:layout_below="@id/new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:hint="@string/new_pass_repeat"
        android:drawableLeft="@drawable/pwd"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:drawablePadding="@dimen/activity_vertical_margin"/>

</RelativeLayout>
