<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.speed.traquer.app.TraqComment">

    <RelativeLayout android:id="@+id/RelativeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <ImageButton
            android:isScrollContainer="false"
            android:id="@+id/comment_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/button_comment"
            android:background="@drawable/border_blue"/>
    </RelativeLayout>

            <TextView
                android:id="@+id/bus_num"
                android:text="@string/bus_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/bus_id"
                android:layout_width="match_parent"
                android:hint="@string/bus_num1"
                android:layout_height="wrap_content"
                android:layout_below="@id/bus_num"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="8"/>

            <TextView
                android:id="@+id/text_comment"
                android:text="@string/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:textSize="15sp"
                android:layout_below="@id/bus_id"
                android:paddingTop="@dimen/logo_vertical_margin"/>

            <EditText
                android:id="@+id/traq_comment"
                android:layout_width="match_parent"
                android:hint="@string/comment1"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_comment"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:imeOptions="actionDone"
                android:imeActionLabel="Done"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/traq_comment"
        android:id="@+id/ratingBar"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:numStars="5"
        android:stepSize="1"/>

    <TextView
        android:id="@+id/ratingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:textSize="15sp"
        android:layout_below="@id/ratingBar"
        android:visibility="invisible"
        android:paddingTop="@dimen/logo_vertical_margin"/>

</RelativeLayout>
