<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_centerInParent="true"
    android:background="@drawable/app_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="@dimen/logo_vertical_margin"
            android:layout_marginRight="@dimen/logo_vertical_margin"
            android:paddingTop="@dimen/logo_vertical_margin"
            android:paddingBottom="@dimen/login_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/login_user"
                android:hint="@string/usr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:background="@drawable/rect_white"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/form_margin"
                android:drawableLeft="@drawable/usr_dark"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:textSize="15sp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/login_pwd"
                android:hint="@string/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@drawable/rect_white"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/form_margin"
                android:drawableLeft="@drawable/pwd_dark"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:textSize="15sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/ibLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/form_margin"
                android:textColor="@color/White"
                android:background="@drawable/btn_sign_in"
                android:layout_weight="1"/>

            <Button
                android:contentDescription="@string/desc"
                android:id="@+id/ibSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/White"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/logo_vertical_margin"
                android:background="@drawable/btn_sign_up"
                android:layout_weight="1"/>


           <!-- <ImageButton
                android:id="@+id/ibFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/fb"/>
            <ImageButton
                android:id="@+id/ibTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tw"
                android:layout_gravity="center"/>!-->
        </LinearLayout>
</RelativeLayout>
